# gpt_bot

./: README.md  pyproject.toml
src/bot/: config.py  dialoge_service.py  main.py  routers.py  service.py  utils.py
src/bot/handlers/: help.py  start.py
src/bot/storage/: storage.py
