[project]
name = "request-gpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.22.0",
    "openai>=2.8.1",
    "pydantic>=2.11.10",
    "pydantic-settings>=2.12.0",
    "ruff>=0.14.5",
]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["F", "E", "W", "I"]
